--- a/crud_escola/src/main/resources/templates/interna/cadastroProf.html
+++ b/crud_escola/src/main/resources/templates/interna/cadastroProf.html
@@ -23,7 +23,7 @@
                 <div class="register-container">
                     <div class="card">
                         <div class="card-header">
-                            <h3>Cadastro Do Professor </h3>
+                            <h3>Pré-Cadastro Do Professor </h3>
                         </div>
                         <div class="card-body">
                             <form method="post" action="pre-cad-Prof">
